--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "weapp-pixi",
   "version": "0.0.1",
   "description": "weapp-pixi(wpx)：基于pixi.js的微信小游戏框架",
-  "main": "index.js",
+  "main": "dist/weapp-pixi.js",
+  "module": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production"
   },
+  "files": [
+    "dist/",
+    "package.json",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xmean/weapp-pixi.git"
@@ -23,6 +29,7 @@
   },
   "homepage": "https://github.com/xmean/weapp-pixi#readme",
   "dependencies": {
+    "@babel/runtime-corejs2": "^7.2.0",
     "pixi.js": "^4.8.3",
     "spark-md5": "^3.0.0",
     "weapp-pixi-adapter": "^0.1.0",
