--- a/package.json
+++ b/package.json
@@ -29,21 +29,22 @@
   },
   "homepage": "https://github.com/xmean/weapp-pixi#readme",
   "dependencies": {
-    "pixi.js": "^4.8.3",
     "spark-md5": "^3.0.0",
     "xmldom": "^0.1.27"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/plugin-transform-regenerator": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-transform-regenerator": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/runtime-corejs2": "^7.3.4",
+    "acorn": "^6.1.1",
     "babel-eslint": "^8.2.6",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "eslint": "^4.19.1",
-    "eslint-loader": "^2.1.1",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2"
+    "eslint-loader": "^2.1.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   }
 }
