--- a/package.json
+++ b/package.json
@@ -28,10 +28,7 @@
     "url": "https://github.com/xmean/weapp-pixi/issues"
   },
   "homepage": "https://github.com/xmean/weapp-pixi#readme",
-  "dependencies": {
-    "spark-md5": "^3.0.0",
-    "xmldom": "^0.1.27"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
@@ -44,7 +41,9 @@
     "babel-loader": "^8.0.5",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.1.2",
+    "spark-md5": "^3.0.0",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "xmldom": "^0.1.27"
   }
 }
